k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: student-attendance
  labels:
    app: student-attendance
    environment: dev
